# block_sorting_aikido

./: CMakeLists.txt  package.xml
include/: BlockDetectorModule.hpp
src/: BlockDetectorModule.cpp  BlockDetectorModule.hpp  block_sorting.cpp
