<?xml version="1.0"?>
<package format="2">
  <name>block_sorting_aikido</name>
  <version>0.1.0</version>
  <description>The block_sorting_aikido package</description>
  <license>UNRELEASED</license>

  <maintainer email="pengjuj@cmu.edu">pengjuj</maintainer>
  <maintainer email="yskim@cs.uw.edu">Youngsun Kim</maintainer>
  <author email="pengjuj@cmu.edu">penjuj</author>
  <author email="yskim@cs.uw.edu">Youngsun Kim</author>  

  <buildtool_depend>cmake</buildtool_depend>
  <depend>aikido</depend>
  <depend>libherb</depend>
  <depend>pr_ordata</depend>
  <depend>tabletop_perception_tools</depend>
  <exec_depend>catkin</exec_depend>
  
</package>
